:bug: Fixed slider style for dark mode.

--- a/css/site.css
+++ b/css/site.css
@@ -351,3 +351,31 @@ button .fa {
     z-index: 3;
     background: url('../images/race.png');
 }
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 10px;
+    background: lightgray;
+    outline: none;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: gray;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: gray;
+    cursor: pointer;
+}
